--- a/index.html
+++ b/index.html
@@ -1,1 +1,267 @@
-.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home</title>
+    <link rel="stylesheet" href="Static/Styles/stilecard1.css " />
+    <link rel="stylesheet" href="Static/Styles/style.css" />
+  </head>
+  <body>
+    <div class="mainconteiner">
+      <div class="left-bar">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae,
+          nulla ex harum laudantium dolores dolor minus aliquam sequi sapiente
+          dolorum ipsa corrupti ratione minima natus architecto nesciunt,
+          praesentium, voluptas magnam?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+          illum. In enim aliquid quam quaerat esse neque labore id ut!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae,
+          nulla ex harum laudantium dolores dolor minus aliquam sequi sapiente
+          dolorum ipsa corrupti ratione minima natus architecto nesciunt,
+          praesentium, voluptas magnam?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur,
+          illum. In enim aliquid quam quaerat esse neque labore id ut!
+        </p>
+      </div>
+      <div class="conteiner">
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+        <div class="card">
+          <a href="#">
+            <img
+              src="Static/Imges/Снимок экрана 2022-11-24 в 17.35.07.png"
+              alt=""
+            />
+          </a>
+          <div class="info">
+            <a href="#">
+              <p>Чебурек</p>
+            </a>
+            <a href="#">
+              <p>25</p>
+            </a>
+            <button>Купить</button>
+          </div>
+        </div>
+      </div>
+      <div class="right-bar">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum
+          pariatur, veniam molestiae deserunt quos animi, quas incidunt aliquam
+          iusto, repudiandae sit suscipit facere voluptates quaerat
+          reprehenderit vero ab accusamus. Eligendi.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+          nostrum maiores error hic inventore ducimus. Doloribus architecto
+          molestias quod non.
+        </p>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum
+          pariatur, veniam molestiae deserunt quos animi, quas incidunt aliquam
+          iusto, repudiandae sit suscipit facere voluptates quaerat
+          reprehenderit vero ab accusamus. Eligendi.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+          nostrum maiores error hic inventore ducimus. Doloribus architecto
+          molestias quod non.
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
