--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div class="navbar">
+      <a href="#">Home</a>
       <div class="drop">
         <button class="nav-btn">&#9776;</button>
         <div class="nav-list">
